--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
+#RewriteRule api/v1/(.*)$ api/v1/api.php?request=$1 [QSA,NC,L]
 </IfModule>
 
 # END WordPress
